--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "build": "NODE_ENV=production webpack && gulp prod",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "babel-core": "^6.21.0",
@@ -19,6 +21,13 @@
     "debug": "~2.2.0",
     "dotenv": "^4.0.0",
     "express": "~4.13.4",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-less": "^3.3.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^2.1.2",
     "hjs": "~0.0.6",
     "jsonwebtoken": "^7.4.0",
     "mongoose": "^4.7.6",
